--- a/client/assets/css/cards.css
+++ b/client/assets/css/cards.css
@@ -6,7 +6,7 @@
     margin: 20px;
     vertical-align: top;
     word-wrap: break-word;
-    background-color: orangered;
+    background-color: white;
 }
 
 @media screen and (min-width: 1000px) {
