--- a/client/assets/css/cards.css
+++ b/client/assets/css/cards.css
@@ -1,3 +1,5 @@
+/* cards */
+
 .card {
     display: inline-block;
     box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
@@ -7,6 +9,7 @@
     vertical-align: top;
     word-wrap: break-word;
     background-color: white;
+    text-align: center;
 }
 
 @media screen and (min-width: 1000px) {
@@ -19,4 +22,43 @@
     .card {
         width: calc(25vw - 136px);
     }
+}
+
+
+/* card contents */
+
+.card .pet-image {
+    width: 100%;
+}
+
+.card .pet-name {
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.card .pet-type {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.card .pet-action-button {
+    border-radius: 4px;
+    background-color: transparent;
+    font: inherit;
+    font-weight: 500;
+    border: 1px solid;
+    height: 36px;
+    padding: 0px 16px;
+    margin: 8px 14px;
+    outline: none;
+}
+button:hover, .card:hover {
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,.2), 0px 4px 5px 0px rgba(0,0,0,.14), 0px 1px 10px 0px rgba(0,0,0,.12);
+}
+button:active {
+    box-shadow: 0px 5px 5px -3px rgba(0,0,0,.2), 0px 8px 10px 1px rgba(0,0,0,.14), 0px 3px 14px 2px rgba(0,0,0,.12);
+}
+
+.card .pet-stat-bar {
+    width: 66%;
 }
