--- a/client/assets/css/cards.css
+++ b/client/assets/css/cards.css
@@ -3,7 +3,6 @@
 .card {
     display: inline-block;
     box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
-    width: calc(50vw - 136px);
     padding: 40px;
     margin: 20px;
     vertical-align: top;
@@ -12,18 +11,29 @@
     text-align: center;
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 0px) {
     .card {
-        width: calc(33.33vw - 136px);
+        width: calc(100vw - 136px); /*1 column*/
+    }
+}
+
+@media screen and (min-width: 500px) {
+    .card {
+        width: calc(50vw - 136px); /*2 column*/
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .card { 
+        width: calc(33.33vw - 136px); /*3 column*/
     }
 }
 
 @media screen and (min-width: 1500px) {
     .card {
-        width: calc(25vw - 136px);
+        width: calc(25vw - 136px); /*4 column*/
     }
 }
-
 
 /* card contents */
 
