--- a/client/assets/css/cards.css
+++ b/client/assets/css/cards.css
@@ -68,6 +68,11 @@ button:hover, .card:hover {
 button:active {
     box-shadow: 0px 5px 5px -3px rgba(0,0,0,.2), 0px 8px 10px 1px rgba(0,0,0,.14), 0px 3px 14px 2px rgba(0,0,0,.12);
 }
+button:hover {
+    background-color: black !important;
+    color: white;
+    border-color: black !important;
+}
 
 .card .pet-stat-bar {
     width: 66%;
