--- a/client/assets/css/cards.css
+++ b/client/assets/css/cards.css
@@ -41,7 +41,7 @@
     width: 100%;
 }
 
-.card .pet-name {
+.card .pet-name, .card .card-title {
     font-size: 25px;
     font-weight: 500;
 }
@@ -51,7 +51,7 @@
     font-weight: 400;
 }
 
-.card .pet-action-button {
+.card .pet-action-button, .card input[type=submit] {
     border-radius: 4px;
     background-color: transparent;
     font: inherit;
@@ -62,13 +62,13 @@
     margin: 8px 14px;
     outline: none;
 }
-button:hover, .card:hover {
+button:hover, .card:hover, input[type=submit]:hover {
     box-shadow: 0px 2px 4px -1px rgba(0,0,0,.2), 0px 4px 5px 0px rgba(0,0,0,.14), 0px 1px 10px 0px rgba(0,0,0,.12);
 }
-button:active {
+button:active, input[type=submit]:active {
     box-shadow: 0px 5px 5px -3px rgba(0,0,0,.2), 0px 8px 10px 1px rgba(0,0,0,.14), 0px 3px 14px 2px rgba(0,0,0,.12);
 }
-button:hover {
+button:hover, input[type=submit]:hover {
     background-color: black !important;
     color: white;
     border-color: black !important;
@@ -76,4 +76,11 @@ button:hover {
 
 .card .pet-stat-bar {
     width: 66%;
+}
+
+.card .text-input, .card .option-selector {
+    outline: none;
+    border-radius: 4px;
+    border-width: 1px;
+    font: inherit;
 }
